# GridOT

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmark/: CMakeLists.txt  README.md  dotmark.h  dotmark.hpp  run_dotmark.cpp  solvers.h
docs/: main.tex  references.bib
docs/data/: GridOT-128.txt  GridOT-256.txt  GridOT-32.txt  GridOT-64.txt  GridOT-CauchyDensity-128.txt  GridOT-CauchyDensity-256.txt  GridOT-CauchyDensity-32.txt  GridOT-CauchyDensity-64.txt  GridOT-ClassicImages-128.txt  GridOT-ClassicImages-256.txt  GridOT-ClassicImages-32.txt  GridOT-ClassicImages-64.txt  GridOT-GRFmoderate-128.txt  GridOT-GRFmoderate-256.txt  GridOT-GRFmoderate-32.txt  GridOT-GRFmoderate-64.txt  GridOT-GRFrough-128.txt  GridOT-GRFrough-32.txt  GridOT-GRFrough-64.txt  GridOT-GRFsmooth-128.txt  GridOT-GRFsmooth-32.txt  GridOT-GRFsmooth-64.txt  GridOT-LogGRF-128.txt  GridOT-LogGRF-32.txt  GridOT-LogGRF-64.txt  GridOT-LogitGRF-128.txt  GridOT-LogitGRF-32.txt  GridOT-LogitGRF-64.txt  GridOT-MicroscopyImages-128.txt  GridOT-MicroscopyImages-32.txt  GridOT-MicroscopyImages-64.txt  GridOT-Shapes-128.txt  GridOT-Shapes-32.txt  GridOT-Shapes-64.txt  GridOT-WhiteNoise-128.txt  GridOT-WhiteNoise-32.txt  GridOT-WhiteNoise-64.txt  MultiScaleOT-128.txt  MultiScaleOT-256.txt  MultiScaleOT-32.txt  (+50 more)
test/: CMakeLists.txt  shielded_pivot_rule.cpp  smart_bpdigraph.cpp  ulm_grid_graph.cpp  ulm_grid_solver.cpp  ulm_network_simplex.cpp
ulmon/: core.h  smart_bpdigraph.h  ulm_grid_graph.h  ulm_grid_solver.h  ulm_network_simplex.h
ulmon/bits/: bpdigraph_extender.h
ulmon/concepts/: bpdigraph.h  shield_generator.h
ulmon/test/: instance.h
ulmon/utils/: exceptions.h  grid.h  metric.h
